[package]

name = "hound"
version = "3.0.1"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
description = "A wav encoding and decoding library"
keywords = ["wav", "wave", "audio", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]
license = "Apache-2.0"
readme = "readme.md"
homepage = "https://github.com/ruuda/hound"
repository = "https://github.com/ruuda/hound"
documentation = "https://docs.rs/hound"

[badges]
travis-ci = { repository = "ruuda/hound", branch = "v3.0.1" }

[dev-dependencies]
cpal = "0.1.2"

# TODO: enable this when sound_stream (or portaudio, actually) builds properly.
# sound_stream = "0.3.2"
