[package]

name = "hound"
version = "3.0.1"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
description = "A wav encoding and decoding library"
keywords = ["wav", "wave", "audio", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]
license = "Apache-2.0"
readme = "readme.md"
homepage = "https://github.com/ruuda/hound"
repository = "https://github.com/ruuda/hound"
documentation = "https://docs.rs/hound"

[badges]
travis-ci = { repository = "ruuda/hound", branch = "v3.0.1" }

[dev-dependencies]
# An older version of cpal, but newer versions depend on the futures library,
# which is incompatible with the version of Rust that Hound guarantees to
# support. We also need to pin the version of lazy_static -- a transitive
# dependency of cpal -- to a version that compiles with a non-nightly compiler.
cpal = "0.2.12"
lazy_static = "=0.2.0"
